# ezcgmath

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: approx.rs  lib.rs  macros.rs  matrix.rs  quaternion.rs  vector.rs
src/matrix/: matrix1x3.rs  matrix2x2.rs  matrix3x3.rs  matrix4x4.rs  mod.rs
tests/: matrix.rs  quaternion.rs  vector.rs
